// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Select SelectWithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="error-boolean--label"
         for="error-boolean"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="error-boolean--label"
          name="error-boolean"
          id="error-boolean"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<button class="nhsuk-button"
        aria-disabled="false"
        type="submit"
>
  Toggle Error
</button>
`;

exports[`Components/Select SelectWithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="error-string--label"
         for="error-string"
  >
    Label text goes here
  </label>
  <span class="nhsuk-error-message"
        id="error-string--error-message"
        role="alert"
  >
    <span class="nhsuk-u-visually-hidden">
      Error:
    </span>
    Error message goes here
  </span>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="error-string--label"
          name="error-string"
          id="error-string"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="error-string-input--label"
         for="error-string-input"
  >
    Use this input to change the error message
  </label>
  <input class="nhsuk-input"
         aria-labelledby="error-string-input--label"
         name="error-string-input"
         id="error-string-input"
         type="text"
         value="Error message goes here"
  >
</div>
`;

exports[`Components/Select SelectWithHintText smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="with-hint-text--label"
         for="with-hint-text"
  >
    Label text goes here
  </label>
  <div class="nhsuk-hint"
       id="with-hint-text--hint"
  >
    Hint text goes here
  </div>
  <select class="nhsuk-select"
          aria-describedby="with-hint-text--hint"
          aria-labelledby="with-hint-text--label"
          name="with-hint-text"
          id="with-hint-text"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;

exports[`Components/Select Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="select-1--label"
         for="select-1"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select"
          aria-labelledby="select-1--label"
          name="select-1"
          id="select-1"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3"
            disabled
    >
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;
